# SVCGAL

./: readme.md
ctSVCGAL/: .gitignore  CMakeLists.txt  Readme.md  ctSVCGAL.cpp  extrude_skeleton.h
ctSVCGAL/code_images/: build_linux.001.fsc  build_linux.002.fsc  file_0040.fsc  file_0041.fsc  file_0042.fsc  file_0044.fsc  file_0045.fsc  file_0046.fsc  file_0049.fsc  file_0051.fsc  file_0052.fsc  file_0053.fsc  file_0055.fsc  file_0056.fsc  file_0057.fsc  file_0058.fsc  file_0059.fsc  file_0060.fsc  file_0061.fsc  file_0062.fsc  file_0063.fsc  file_0064.fsc  file_0065.fsc  file_0066.fsc  file_0067.fsc  file_0068.fsc  file_0069.fsc  file_0070.fsc  file_0071.fsc  file_0072.fsc  file_0073.fsc  file_0074.fsc  file_0075.fsc  file_0076.fsc  file_0077.fsc  file_0078.fsc  file_0079.fsc  file_0080.fsc  file_0081.fsc  file_0082.fsc  (+12 more)
images/: StraightSkeleton2DExtrude.fsc  StraightSkeleton2DOffset.fsc
pySVCGAL/: README.md  pyproject.toml  setup.py
pySVCGAL/images/: pypi_package_build.001.fsc  pypi_package_publish.001.fsc
pySVCGAL/src/pySVCGAL/: pySVCGAL.py
pySVCGAL/src/pySVCGAL/clib/: libctSVCGAL.dylib  load_library.py
